more toc id attribute links
links from toc to mouse and keyboard document complete. onto keyboard
shortcuts.

--- a/accessibility-in-windows-8/index.html
+++ b/accessibility-in-windows-8/index.html
@@ -131,7 +131,7 @@
               <li><a href="personalization.html#syncyoursettings">Sync your settings</a></li>
             </ol>
           </li>
-          <li><a href="#mouseandkeyboard">Mouse and Keyboard</a>
+          <li><a href="mouse-and-keyboard.html">Mouse and Keyboard</a>
             <ol class="toc-sub">
               <li><a href="#mouseandkeyboardnew">Mouse and keyboard: What's new in Windows</a></li>
               <li><a href="#touchkeyboard">How to use the touch keyboard</a></li>
@@ -166,7 +166,7 @@
               </li>
             </ol>
           </li>
-          <li><a href="#keyboardshortcuts">Keyboard Shortcuts</a>
+          <li><a href="keyboard-shortcuts.html">Keyboard Shortcuts</a>
             <ol class="toc-sub">
               <li><a href="#newkeyboardshortcuts">New keyboard shortcuts for Windows 8 and Windows RT</a>
                 <ol class="toc-sub-sub">
