--- a/accessibility-in-windows-8/mouse-and-keyboard.html
+++ b/accessibility-in-windows-8/mouse-and-keyboard.html
@@ -13,7 +13,7 @@
         <article role="article">
           <section role="region">
             <h1>Mouse and Keyboard</h1>
-        <h2><a href="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/" title="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/">Mouse and keyboard: What's new in Windows</a></h2>
+        <h2><a id="mouseandkeyboardnew" href="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/" title="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/">Mouse and keyboard: What's new in Windows</a></h2>
         <p>Most of what you know about using a mouse and keyboard with Windows has stayed the same, especially in the desktop. Here are a few ways to use the new Windows 8 and Windows RT features with a mouse and with keyboard shortcuts—and how to find some familiar things in new places.</p>
 <table class="smallertext">
   <caption>Mouse and Keyboard Commands and Resulting Outcome(s)</caption>
@@ -49,7 +49,7 @@
     <tr><td><p>Shut down</p></td><td><p>Point to the upper-right or lower-right corner to see the charms. (Try moving so far into the corner that the mouse pointer disappears.) When the charms appear, move up or down the edge, and then click <strong>Settings</strong>. Click <strong>Power</strong>, and then select a shutdown option.</p></td><td><p>Press <strong>Ctrl+Alt+Del</strong>.</p><p>Use the Tab key to move to the <strong>Power</strong> icon. A list of shutdown options appears.</p><p>Use the up or down arrow keys to get to the option you want.</p><p>Press <strong>Enter</strong>.</p></td></tr>
   </tbody>
 </table>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/using-touch-keyboard/">How to use the touch keyboard</a></h2>
+<h2><a id="touchkeyboard" href="http://windows.microsoft.com/en-US/windows-8/using-touch-keyboard/">How to use the touch keyboard</a></h2>
 <p>You can use different keyboards with Windows to fit your needs. The most common is a physical, external keyboard that you plug into your <abbr>pc</abbr>. Windows 8 and Windows RT also include a <strong>touch keyboard</strong> for <abbr>pc</abbr>s with touch.</p>
 <figure>
   <a href="http://windows.microsoft.com/en-US/windows-8/using-touch-keyboard/"><img src="i/image031.jpg" alt="How to use the Touch Keybard" /></a>
@@ -85,7 +85,7 @@
   <li>3. Tap <strong>Touch keyboard and handwriting panel</strong>.</li>
   <li>4. Tap where you want to type.</li>
 </ol>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/touch-swipe-tap-beyond" title="http://windows.microsoft.com/en-US/windows-8/touch-swipe-tap-beyond">Touch: swipe, tap, and beyond</a></h2>
+<h2><a id="touchswipetap" href="http://windows.microsoft.com/en-US/windows-8/touch-swipe-tap-beyond" title="http://windows.microsoft.com/en-US/windows-8/touch-swipe-tap-beyond">Touch: swipe, tap, and beyond</a></h2>
 <p>If you want to know what we mean when we mention swipe, tap, or other ways to interact with Windows 8 or Windows RT when you’re using a touchscreen, take a look at this table.</p>
 <table class="smallertext">
   <caption>Touchscreen Commands (Swipe, Tap) and Resulting Outcome(s)</caption>
@@ -126,9 +126,9 @@
     <li>• Your screen resolution must be at least 1366 x 768 to snap apps. To check this setting: Open Screen Resolution by swiping in from the right edge of the screen, tapping <strong>Search</strong> (or if you're using a mouse, pointing to the upper-right corner of the screen, moving the mouse pointer down, and then clicking <strong>Search</strong>), entering <strong>Display</strong> in the search box, tapping or clicking <strong>Settings</strong>, and then tapping or clicking <strong>Display</strong>.</li>
   </ul></div>
 <p>To learn about how to do similar tasks using a mouse and keyboard, see <a href="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/" title="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/">Mouse and keyboard: What's new in Windows</a>. For more on using the new features, see <a href="http://windows.microsoft.com/en-US/windows-8/getting-started-with-windows" title="http://windows.microsoft.com/en-US/windows-8/getting-started-with-windows">Get to know Windows</a>.</p>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/touch-pen-settings-frequently-asked-questions">Touch and pen settings: Frequently asked questions</a></h2>
+<h2><a id="touchpen" href="http://windows.microsoft.com/en-US/windows-8/touch-pen-settings-frequently-asked-questions">Touch and pen settings: Frequently asked questions</a></h2>
 <p>Here are answers to some common questions about touch and pen settings.</p>
-<h3 class="tableheader">How do I check if my <abbr>pc</abbr> has a touchscreen?</h3>
+<h3 id="howdoicheck" class="tableheader">How do I check if my <abbr>pc</abbr> has a touchscreen?</h3>
 <p>Try using your finger to tap a tile on Start. If it’s a touchscreen, the app will open. You can also check your current system settings with your mouse:</p>
 <p>From Start, click the Desktop tile.</p>
 <ol>
@@ -144,7 +144,7 @@
 </figure>
         
 <p>Touch input is on by default and can’t be turned off. If you expect your laptop or monitor to respond to touch and it doesn’t, check the manufacture’s website to make sure it supports touch and that you have the correct drivers installed. </p>
-<h3 class="tableheader">How do I calibrate my pen and touch settings?</h3>
+<h3 id="howdoicalibrate" class="tableheader">How do I calibrate my pen and touch settings?</h3>
 <p>To adjust how accurately your screen senses when you use a pen or finger:</p>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)
@@ -160,7 +160,7 @@
    <figcaption>Tablet <abbr>pc</abbr> Settings</figcaption>
 </figure>
         
-<h3 class="tableheader">How do I get my touchscreen to go to the correct screen?</h3>
+<h3 id="howdoitouchscreen" class="tableheader">How do I get my touchscreen to go to the correct screen?</h3>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)
 </li>
@@ -173,7 +173,7 @@
    <figcaption>Tablet <abbr>pc</abbr> Settings</figcaption>
 </figure>
 
-<h3 class="tableheader">How do I change my pen and touch actions?</h3>
+<h3 id="howdoichangeactions" class="tableheader">How do I change my pen and touch actions?</h3>
     <p>To change how fast, far, or long an action takes:</p>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>.
@@ -188,7 +188,7 @@
    <figcaption>Pen and Touch Settings</figcaption>
 </figure>
 
-<h3 class="tableheader"><a href="http://www.microsoft.com/enable/training/windows8/change-keyboard.aspx" title="http://www.microsoft.com/enable/training/windows8/change-keyboard.aspx">Change keyboard settings</a></h3>
+<h3 id="changekeyboardsettings" class="tableheader"><a href="http://www.microsoft.com/enable/training/windows8/change-keyboard.aspx" title="http://www.microsoft.com/enable/training/windows8/change-keyboard.aspx">Change keyboard settings</a></h3>
     <p>If you want to make the keyboard easier to use, you can change the settings to suit your needs.</p>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>.
@@ -211,9 +211,9 @@
     <li>• If you prefer to use your <abbr>pc</abbr> without using a keyboard, try using On-Screen Keyboard, a tool that lets you enter text by selecting characters on the screen. For more info, see <a href="http://windows.microsoft.com/en-US/windows-8/type-with-the-on-screen-keyboard" title="http://windows.microsoft.com/en-US/windows-8/type-with-the-on-screen-keyboard">Use On-Screen Keyboard to type</a>.</li>
     <li>• If you're looking for new ways to use a mouse and keyboard, see <a href="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/" title="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/">Mouse and keyboard: What’s new in Windows</a>.</li>
   </ul></div>
-<h2><a href="http://windows.microsoft.com/en-US/windows-8/change-keyboard-layout">Change the keyboard layout</a></h2>
+<h2><a id="changekeyboardlayout" href="http://windows.microsoft.com/en-US/windows-8/change-keyboard-layout">Change the keyboard layout</a></h2>
     <p>You can add a keyboard layout to a language and switch to using that if you want to use the same layout to type in different languages or don't want to use the default one that Windows provides.</p>
-<h3 class="tableheader">To change the keyboard layout for a language</h3>
+<h3 id="changekeyboardlayoutforlanguage" class="tableheader">To change the keyboard layout for a language</h3>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
   <li>2. Enter <strong>language</strong>, choose <strong>Settings</strong>, and then tap or click <strong>Add a language</strong>.</li>
@@ -222,9 +222,9 @@
   <li>5. Browse the input method list or use the search box to find the keyboard layout you want to use.</li>
   <li>6. Double-tap or double-click the keyboard layout, and then tap or click <strong>Save</strong>.</li>
 </ol>
-<h2><a href="http://www.microsoft.com/enable/training/windows8/change-mouse.aspx" title="http://www.microsoft.com/enable/training/windows8/change-mouse.aspx">Change mouse settings</a></h2>
+<h2><a id="changemousesettings" href="http://www.microsoft.com/enable/training/windows8/change-mouse.aspx" title="http://www.microsoft.com/enable/training/windows8/change-mouse.aspx">Change mouse settings</a></h2>
 <p>If you want to make the mouse easier to use, you can change the settings to suit your needs.</p>
-<h3 class="tableheader">To change the mouse settings</h3>
+<h3 id="tochangemousesettings" class="tableheader">To change the mouse settings</h3>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
   <li>2. In the search box, enter <strong>Change how your mouse works</strong>, tap or click <strong>Settings</strong>, and then tap or click <strong>Change how your mouse works</strong>.</li>
@@ -243,16 +243,16 @@
     <li>• If you're looking for new ways to use a mouse and keyboard, see <a href="http://windows.microsoft.com/en-US/windows-8/mouse-keyboard-whats-new/">Mouse and keyboard: What’s new in Windows</a>.</li>
   </ul>
 </div>
-<h2><a href="http://www.microsoft.com/enable/training/windows8/use-numeric-keypad.aspx" title="http://www.microsoft.com/enable/training/windows8/use-numeric-keypad.aspx">Use the numeric keypad to move the mouse pointer</a></h2>
+<h2><a id="numerickeysasmouse" href="http://www.microsoft.com/enable/training/windows8/use-numeric-keypad.aspx" title="http://www.microsoft.com/enable/training/windows8/use-numeric-keypad.aspx">Use the numeric keypad to move the mouse pointer</a></h2>
 <p>When you turn on Mouse Keys, you can move the mouse pointer using the numeric keypad on your keyboard instead of using a mouse.</p>
-<h3 class="tableheader">To turn on Mouse Keys</h3>
+<h3 id="turnonmousekeys" class="tableheader">To turn on Mouse Keys</h3>
 <ol>
   <li>1. Swipe in from the right edge of the screen, and then tap <strong>Search</strong>. (If you're using a mouse, point to the upper-right corner of the screen, move the mouse pointer down, and then click <strong>Search</strong>.)</li>
   <li>2. Tap or click <strong>Settings</strong>.</li>
   <li>3. In the search box, <strong>enter Change how your mouse works</strong>, and then tap or click <strong>Change how your mouse works</strong>.</li>
   <li>4. Under <strong>Control the mouse with the keyboard</strong>, select the <strong>Turn on Mouse Keys</strong> check box, and then or click <strong>OK</strong>.</li>
 </ol>
-<h3 class="tableheader">Moving the pointer using Mouse Keys</h3>
+<h3 id="movepointerusingmousekeys" class="tableheader">Moving the pointer using Mouse Keys</h3>
 <p>After you turn on Mouse Keys, you can use the numeric keypad to move the mouse.</p>
 <table>
   <caption>Numeric Keypad Actions and Resulting Outcome(s)</caption>
@@ -268,7 +268,7 @@
     <tr><td><p>Down and to the right</p></td><td><p>3</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Selecting a mouse button</h3>
+<h3 id="selectmousebutton" class="tableheader">Selecting a mouse button</h3>
 <p>Before you use Mouse Keys to click items on your screen, you’ll first need to select which mouse button you want to be the active button: the left button, the right one, or both.</p>
 <table>
   <caption>Keys Pressed in Order to Select a Mouse Button</caption>
@@ -280,7 +280,7 @@
   </tbody>
 </table>
 <div class="note"><p><strong class="block">Note:</strong> If you choose to make the left mouse button the active button, it will remain the active button until you choose another button. After you select a mouse button, you don't need to select a mouse button again until you want to change buttons.</p></div>
-<h3 class="tableheader">Clicking items using Mouse Keys</h3>
+<h3 id="mousekeyclickitem" class="tableheader">Clicking items using Mouse Keys</h3>
 <p>After you choose a button, you can click items on your screen.</p>
 <table>
   <caption>Clicking Items using Mouse Keys Commands</caption>
@@ -291,7 +291,7 @@
     <tr><td><p>Double-click an item</p></td><td><p>With the left button selected as your active button, point to the item, and then press the plus sign (+)</p></td></tr>
   </tbody>
 </table>
-<h3 class="tableheader">Dragging items using Mouse Keys</h3>
+<h3 id="mousekeydragitem" class="tableheader">Dragging items using Mouse Keys</h3>
 <p>You can use the numeric keypad to press and hold the active mouse button and to release it. This is helpful if you want to drag an item.</p>
 <table>
   <caption>Dragging Items using Mouse Keys Commands</caption>
