--- a/accessibility-in-windows-8/keyboard-shortcuts.html
+++ b/accessibility-in-windows-8/keyboard-shortcuts.html
@@ -21,7 +21,7 @@
         <h1 class="notright"><a id="newkeyboardshortcuts" href="http://windows.microsoft.com/en-US/windows-8/new-keyboard-shortcuts#1TC=t1">New keyboard shortcuts for Windows 8 and Windows RT</a></h1>
         <p>With Windows 8 and Windows RT, you can use the keyboard shortcuts you're already using, and you'll find new ones too. For example, the easiest way to search on the Start screen is to simply start typing. Not on the Start screen? Press the Windows logo key‌ <img src="i/icon-windows-logo-button.jpg" alt="Windows Logo Key" class="imginline" /> and you can quickly switch between Start and the app you're in.</p>
         <p>If you’re not familiar with keyboard shortcuts—or you’d like to see a list of shortcuts in one place—see the bigger list of <a href="http://windows.microsoft.com/en-US/windows-8/keyboard-shortcuts/" title="Windows 8 &#45; keyboard shortcuts">keyboard shortcuts</a>.</p>
-        <h3 class="tableheader">Useful keyboard shortcuts for Windows</h3>
+        <h3 id="usefulkeyboardshortcuts" class="tableheader">Useful keyboard shortcuts for Windows</h3>
         <table class="smallertext">
           <caption>The following table contains useful keyboard shortcuts for Windows</caption>
           <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -50,8 +50,8 @@
             <tr><td width="28%">Windows logo key‌ ‌ <img src="i/icon-windows-logo-button.jpg" alt="Windows Logo Key" class="imginline" /> + <br /> period (.)</td><td width="68%"><p>Snaps an app to the right</p></td></tr>
   </tbody>
 </table>
-  <h2><a href="http://windows.microsoft.com/en-US/windows-8/keyboard-shortcuts/" title="Windows 8 &#45; Complete list of keyboard shortcuts">Complete list of keyboard shortcuts</a></h2>
-  <h3 class="tableheader">General keyboard shortcuts</h3>
+  <h2><a id="completelistkeyboardshortcuts" href="http://windows.microsoft.com/en-US/windows-8/keyboard-shortcuts/" title="Windows 8 &#45; Complete list of keyboard shortcuts">Complete list of keyboard shortcuts</a></h2>
+  <h3 id="generalkeyboardshortcuts" class="tableheader">General keyboard shortcuts</h3>
 <table>
   <caption>The following table contains general keyboard shortcuts that you can use to navigate around Windows.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -104,7 +104,7 @@
   </thead>
 </table>
 
-  <h3 class="tableheader">Dialog box keyboard shortcuts</h3>
+  <h3 id="dialogboxkeyboardshortcuts" class="tableheader">Dialog box keyboard shortcuts</h3>
 <table class="smallertext">
   <caption>The following table contains keyboard shortcuts that you can use to navigate dialog boxes.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -124,7 +124,7 @@
 </table>
 
 
-  <h3 class="tableheader">File Explorer keyboard shortcuts</h3>
+  <h3 id="fileexplorerkeyboardshortcuts" class="tableheader">File Explorer keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with File Explorer windows or folders.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -155,7 +155,7 @@
 </table>
 
 
-  <h3 class="tableheader">Taskbar keyboard shortcuts</h3>
+  <h3 id="taskbarkeyboardshortcuts" class="tableheader">Taskbar keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with items on the desktop taskbar.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -169,7 +169,7 @@
 </table>
 
 
-  <h3 class="tableheader">Windows logo key keyboard shortcuts</h3>
+  <h3 id="windowslogokeykeyboardshortcuts" class="tableheader">Windows logo key keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts that use the Windows logo key <img src="i/icon-windows-logo-button.jpg" alt="Windows Logo Key" class="imginline" />.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -235,7 +235,7 @@
 </table>
 
 
-  <h3 class="tableheader">Calculator keyboard shortcuts</h3>
+  <h3 id="calculatorkeyboardshortcuts" class="tableheader">Calculator keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Calculator.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -318,7 +318,7 @@
   </tbody>
 </table>
 
-  <h3 class="tableheader">Calendar keyboard shortcuts</h3>
+  <h3 id="calendarkeyboardshortcuts" class="tableheader">Calendar keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with the Calendar appapp.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -343,7 +343,7 @@
   </tbody>
 </table>
 
-  <h3 class="tableheader">Ease Of Access keyboard shortcuts</h3>
+  <h3 id="easeofaccesskeyboardshortcuts" class="tableheader">Ease Of Access keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts that can help make your PC easier to use.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -357,11 +357,11 @@
   </tbody>
 </table>
 
-  <h3 class="tableheader">Internet Explorer keyboard shortcuts</h3>
+  <h3 id="iekeyboardshortcuts" class="tableheader">Internet Explorer keyboard shortcuts</h3>
   <p>You can find shortcuts for Internet Explorer at <a href="http://windows.microsoft.com/en-US/internet-explorer/ie-keyboard-shortcuts#ie=ie-9">Internet Explorer shortcuts</a>.</p>
 
 
-  <h3 class="tableheader">Magnifier keyboard shortcuts</h3>
+  <h3 id="magnifierkeyboardshortcuts" class="tableheader">Magnifier keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Magnifier.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -379,7 +379,7 @@
 </table>
 
 
-  <h3 class="tableheader">Mail keyboard shortcuts</h3>
+  <h3 id="mailkeyboardshortcuts" class="tableheader">Mail keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with the Mail app.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -433,7 +433,7 @@
 
 
 
-  <h3 class="tableheader">Messaging keyboard shortcuts</h3>
+  <h3 id="messagingkeyboardshortcuts" class="tableheader">Messaging keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with the Messaging app.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -447,7 +447,7 @@
 </table>
 
 
-  <h3 class="tableheader">Narrator keyboard shortcuts</h3>
+  <h3 id="narratorkeyboardshortcuts" class="tableheader">Narrator keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Narrator.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -470,7 +470,7 @@
   </tbody>
 </table>
 
-  <h3 class="tableheader">Narrator touch keyboard shortcuts</h3>
+  <h3 id="narratortouchkeyboardshortcuts" class="tableheader">Narrator touch keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Narrator on a four-point touch-enabled PC.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -487,7 +487,7 @@
 </table>
 
 
-  <h3 class="tableheader">Paint keyboard shortcuts</h3>
+  <h3 id="paintkeyboardshortcuts" class="tableheader">Paint keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Paint.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -528,7 +528,7 @@
 
 
 
-  <h3 class="tableheader">People App keyboard shortcuts</h3>
+  <h3 id="peopleappkeyboardshortcuts" class="tableheader">People App keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for the People app.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -547,7 +547,7 @@
 </table>
 
 
-  <h3 class="tableheader">Reader keyboard shortcuts</h3>
+  <h3 id="readerkeyboardshortcuts" class="tableheader">Reader keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with the Reader app.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -563,7 +563,7 @@
   </tbody>
 </table>
 
-  <h3 class="tableheader">Remote Desktop Connection on the desktop keyboard shortcuts</h3>
+  <h3 id="remotedesktopconnectionondesktopkeyboardshortcuts" class="tableheader">Remote Desktop Connection on the desktop keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Remote Desktop Connection on the desktop.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -584,7 +584,7 @@
 </table>
 
 
-  <h3 class="tableheader">Remote Desktop Connection keyboard shortcuts</h3>
+  <h3 id="remotedesktopkeyboardshortcuts" class="tableheader">Remote Desktop Connection keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Remote Desktop Connection.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -599,7 +599,7 @@
 
 
 
-  <h3 class="tableheader">Skydrive keyboard shortcuts</h3>
+  <h3 id="skydrivekeyboardshortcuts" class="tableheader">Skydrive keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with SkyDrive.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -621,7 +621,7 @@
 </table>
 
 
-  <h3 class="tableheader">Windows Help viewer keyboard shortcuts</h3>
+  <h3 id="winhelpviewerkeyboardshortcuts" class="tableheader">Windows Help viewer keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with the Help viewer.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -642,7 +642,7 @@
 </table>
 
 
-  <h3 class="tableheader">Windows Journal keyboard shortcuts</h3>
+  <h3 id="winjournalkeyboardshortcuts" class="tableheader">Windows Journal keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with Windows Journal.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
@@ -669,7 +669,7 @@
   </tbody>
 </table>
 
-  <h3 class="tableheader">Wordpad keyboard shortcuts</h3>
+  <h3 id="wordpadkeyboardshortcuts" class="tableheader">Wordpad keyboard shortcuts</h3>
 <table class="fixsmallertext">
   <caption>The following table contains keyboard shortcuts for working with WordPad.</caption>
   <thead><tr><th width="30%">Press this key</th><th width="68%">To do this</th></tr></thead>
